--- a/Unidad_2/1_primitivas_vs_objetos/index.html
+++ b/Unidad_2/1_primitivas_vs_objetos/index.html
@@ -58,11 +58,11 @@
 		console.log('El largo de la cadena es: ', cadena.length);
 
 
-		const valorBooleano = new Boolean(true);
+		// const valorBooleano = new Boolean(true);
 
-		const valorNumerico = new Number(10);
+		// const valorNumerico = new Number(10);
 
-		const valorTexto = new String('abc');
+		// const valorTexto = new String('abc');
 		
 
 
